# autocrap-rocks

./: .gitignore  .gitmodules  Makefile.am  README  configure.ac
lib/: Makefile.am  l10n.h
lib/crap/: Makefile.am  crap.c  crap.h  crap.pc.in
lib/old/: Makefile.am  kanye-notify.c  kanye-notify.h  kanye.c  kanye.h  old.c  old.h  old.pc.in
po/: .gitignore  Makevars  POTFILES.in  ru.po
src/: .gitignore  Makefile.am  rocks.c
tests/: Makefile.am  crap-test.c  kanye-test.c  old-test.c
